--- a/index.html
+++ b/index.html
@@ -11,12 +11,18 @@
         <h1>Upload CSV File</h1>
         <input type="file" id="fileInput" accept=".csv">
         <button id="processBtn">Duplicate Payment</button>
+        
         <table id="outputTable">
             <thead>
                 <tr>
-                    <th>Transaction ID</th>
+                    <th>Merchant ID</th>
+                    <th>Order ID</th>
+                    <th>Payment Method</th>
                     <th>Amount</th>
+                    <th>PAN</th>
                     <th>Date</th>
+                    <th>Merchant Name</th>
+                    <th>Acquirer</th>
                 </tr>
             </thead>
             <tbody></tbody>
