--- a/index.html
+++ b/index.html
@@ -13,18 +13,26 @@
         <button id="processBtn">Duplicate Payment</button>
         
         <table id="outputTable">
-            <thead>
-                <tr>
-                    <th>Merchant ID</th>
-                    <th>Order ID</th>
-                    <th>Payment Method</th>
-                    <th>Amount</th>
-                    <th>PAN</th>
-                    <th>Date</th>
-                    <th>Merchant Name</th>
-                    <th>Acquirer</th>
-                </tr>
-            </thead>
+            <table id="outputTable">
+                <thead>
+                    <tr>
+                        <th>Merchant ID</th>       <!-- Column B -->
+                        <th>Order ID</th>          <!-- Column E -->
+                        <th>Payment Method</th>    <!-- Column G -->
+                        <th>Amount</th>            <!-- Column I -->
+                        <th>PAN</th>               <!-- Column N -->
+                        <th>Date</th>              <!-- Column O -->
+                        <th>Merchant Name</th>     <!-- Column Q -->
+                        <th>Acquirer</th>          <!-- Column S -->
+                        <th>Partner Name</th>      <!-- Column X -->
+                        <th>Payment ID</th>        <!-- Column Y -->
+                    </tr>
+                </thead>
+                <tbody>
+                    <!-- Duplicate payments will be inserted here -->
+                </tbody>
+            </table>
+            
             <tbody></tbody>
         </table>
     </div>
