--- a/index.html
+++ b/index.html
@@ -8,31 +8,25 @@
 </head>
 <body>
     <div class="container">
-        <h1>Upload CSV File</h1>
+        <h1>DUPLICATE TRANSACTIONS FINDER</h1>
         <input type="file" id="fileInput" accept=".csv">
         <button id="processBtn">Duplicate Payment</button>
         
         <table id="outputTable">
-            <table id="outputTable">
-                <thead>
-                    <tr>
-                        <th>Merchant ID</th>       <!-- Column B -->
-                        <th>Order ID</th>          <!-- Column E -->
-                        <th>Payment Method</th>    <!-- Column G -->
-                        <th>Amount</th>            <!-- Column I -->
-                        <th>PAN</th>               <!-- Column N -->
-                        <th>Date</th>              <!-- Column O -->
-                        <th>Merchant Name</th>     <!-- Column Q -->
-                        <th>Acquirer</th>          <!-- Column S -->
-                        <th>Partner Name</th>      <!-- Column X -->
-                        <th>Payment ID</th>        <!-- Column Y -->
-                    </tr>
-                </thead>
-                <tbody>
-                    <!-- Duplicate payments will be inserted here -->
-                </tbody>
-            </table>
-            
+            <thead>
+                <tr>
+                    <th>Payment ID</th>
+                    <th>Partner Name</th>
+                    <th>Acquirer</th>
+                    <th>Payment Method</th>
+                    <th>Merchant ID</th>             
+                    <th>Order ID</th>
+                    <th>Merchant Name</th>
+                    <th>Amount</th>
+                    <th>PAN</th>
+                    <th>Date</th>
+                </tr>
+            </thead>
             <tbody></tbody>
         </table>
     </div>
