--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <div class="container">
         <h1>DUPLICATE TRANSACTIONS FINDER</h1>
         <input type="file" id="fileInput" accept=".csv">
-        <button id="processBtn">Duplicate Payment</button>
+        <div class="button-group">
+            <button id="selectAllBtn">SELECT ALL</button>
+            <button id="processBtn">DUPLICATE PAYMENTS</button>
+        </div>
         
         <table id="outputTable">
             <thead>
