--- a/index.html
+++ b/index.html
@@ -7,31 +7,35 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <h1>DUPLICATE TRANSACTIONS FINDER</h1>
-        <input type="file" id="fileInput" accept=".csv">
-        <div class="button-group">
+    <div class="dashboard">
+        <!-- Navigation Bar on the Left -->
+        <nav class="sidebar">
             <button id="selectAllBtn">SELECT ALL</button>
+        </nav>
+
+        <div class="container">
+            <h1>DUPLICATE TRANSACTIONS FINDER</h1>
+            <input type="file" id="fileInput" accept=".csv">
             <button id="processBtn">DUPLICATE PAYMENTS</button>
+
+            <table id="outputTable">
+                <thead>
+                    <tr>
+                        <th>Payment ID</th>
+                        <th>Partner Name</th>
+                        <th>Acquirer</th>
+                        <th>Payment Method</th>
+                        <th>Merchant ID</th>             
+                        <th>Order ID</th>
+                        <th>Merchant Name</th>
+                        <th>Amount</th>
+                        <th>PAN</th>
+                        <th>Date</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
         </div>
-        
-        <table id="outputTable">
-            <thead>
-                <tr>
-                    <th>Payment ID</th>
-                    <th>Partner Name</th>
-                    <th>Acquirer</th>
-                    <th>Payment Method</th>
-                    <th>Merchant ID</th>             
-                    <th>Order ID</th>
-                    <th>Merchant Name</th>
-                    <th>Amount</th>
-                    <th>PAN</th>
-                    <th>Date</th>
-                </tr>
-            </thead>
-            <tbody></tbody>
-        </table>
     </div>
 
     <script src="script.js"></script>
